# pyapp.pyspark

./: LICENSE  README.rst  setup.cfg  setup.py
pyapp_ext/pyspark/: __init__.py  default_settings.py  factory.py
tests/: conftest.py  test_factory.py
