[metadata]
name = pyApp-PySpark
author = Tim Savage
author-email = tim@savage.company
description = PySpark Extension for PyApp
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://github.com/pyapp-org/pyapp.pyspark
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.pyspark
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    pyapp >=4.0
    pyspark >=2.0,<3.0
    pyspark-stubs
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyspark = pyapp_ext.pyspark:Extension

[options.extras_require]
dev =
	docutils
	black

[aliases]
test = pytest

[bdist_wheel]
universal = False

[tool:pytest]
addopts =
    --cov=pyapp_ext.pyspark

[check]
metadata = true
restructuredtext = true
strict = true
